# FENIAX

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  AUTHORS.md  README.md  add_dir.sh  algorithms.md~  bash_tools.sh  config0.py  feminas_functions.py  feminas_main.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  readme.org  requirements.txt  setup.py
.github/workflows/: tests.yaml
Aerodynamics/: dlm_utils.py  opt_poles.py  projection.py  rfa.py  rfa_main.py  rfa_plot.py
ArgyrisBeam/FEM/: eigenvecs.npy
ArgyrisFrame/: config.yaml
ArgyrisFrame/FEM/: structuralGrid  structuralGrid2
BUG/: P1_modalsolution.py  P22_buildFEM.py  P3_dlm.py  P6_outputgafs.py  P8_rungafSteady.sh  P9_getgafSteady.py  README.md  modelgeneration.org  settings.py  settings_ADDiscreteLoadsMC_validation.py  settings_ADDiscreteMC1_t_fdjac.py  settings_DiscreteMC1high.py  settings_DiscreteMC1vsmall.py  settings_gust1.py  settings_gust1AD.py  settings_gust1shard.py  settings_gust1shardbench.py  settings_gustAD.py  settings_gustforager.py  workflow.sh
BUG/AERO/: Dihedral_d1c7.npy  PolesDd1c7F1Scao-50p5.npy  QaxDd1c7F3Scao-50.npy  QhxDd1c7F2Scao-50.npy
BUG/FEM/: Ka_ea.npy  Ma_ca.npy  eigenvals_cao100.npy  eigenvals_cao300.npy  eigenvals_cao50.npy  eigenvecs_cao100.npy  eigenvecs_cao50.npy
BUG/NASTRAN/: BUG103.bdf  generate_aero.py  run_cao.bdf
Condensation/: condensation.py
DoublePendulum/FEM/: structuralGrid
EbnerBeam/: read_old.py
ExternalData/: ModifyArgy.py  Simo45-dead.pickle  Simo45.pickle  Simo68.pickle  hesse68.pickle  hesse683D.pickle  reading.py
ExternalData/Simo45/: u3.csv
ExternalData/Simo45-dead/: u1.csv
ExternalData/Simo68/: t1.csv  t10.csv  t2.csv  t2_5.csv  t4.csv  t6.csv  t8.csv
ExternalData/hesse68/: hesse68-t1.csv  hesse68-t10.csv  hesse68-t10r.csv  hesse68-t2_5.csv  hesse68-t4.csv  hesse68-t6.csv  hesse68-t8.csv
ExternalData/hesse683D/: t0.csv  t2.csv  t3.csv  t3_8.csv  t4_4.csv  t5.csv  t5_5.csv  t5_8.csv  t6_1.csv  t6_5.csv
ExternalData/hesse683D-yz/: t0.csv  t2_5.csv  t3_5.csv  t3_8.csv  t4_5.csv
FEM4INAS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Generators/: aero_inp0.py  beam_inp0.py  modelGen.py
Generators/BeamGen/: BGen.py  Beam_gerandin.py  Beam_simo2.py  MatGen.py  Run.py
Generators/WingGen/: Wing.py  Wing_rot.py
JAX/: index.html
LICENSE/: index.html
Models/ArgyrisFrame_20/: plot1.py
Models/GolandWing40Clean/: aero_loads.py  confi_GW1.py  flutter.py  initq.py  initq2.py  loads.py  variables.py
Models/GolandWinglong/: aero_loads.py  confi_GW1.py  flutter.py  initq22.py  loads.py  variables.py
Models/RafaBeam30_lum/: initFunc_test.py
Models/SailPlane/: confi_static.py  makeplot_new.py  run_static.sh  variables_static.py
Models/Shell_ArgyrisBeam25/: loads.py  variables.py
Pendulum/FEM26nodes/: Ka.npy
Pendulum/FEM2nodes/: Maac.npy  structuralGridConstrained
PostProcessing/: panels.py
RafaFlyingBeam/: P2_runmodal.sh  P3_simulation.py  P5_rafa.py  P6_qsInput.py  P7_qsInputN9.py  modelgen.org
RafaFlyingBeam/FEM/: Ka_m3.npy  eigenvalsX_m1.npy  eigenvals_m9.npy  eigenvecsX_m1.npy  eigenvecs_m1.npy  eigenvecs_m7.npy  eigenvecs_m9.npy  structuralGrid_m9
RafaFlyingBeam/NASTRAN/: Model1_103op2.bdf  Model2_103op2.bdf  Model4_103op2.bdf  Model5_103op2.bdf  Model7_103pch.bdf  Model8_103op2.bdf  model1.bdf  model4.bdf
RafaFlyingBeam/matlab/: threemass_antisym.m  threemass_sym.m  threemass_sym_grav.m
Runs/: Torun.py  pyfem2nl_mainc.py
Runs/ArgyrisBeam_25/: F.py  F3d.py  F3dz.py  V.py
Runs/ArgyrisBeam_25mul/: Fa_pressure  Fa_pressure2  Fa_pressure3  V.py
Runs/ArgyrisBeam_50/: V.py
Runs/ArgyrisFrame_20/: F.py  F2d.py  F3d.py  V.py
Runs/ArgyrisFrame_20o/: V.py
Runs/ArgyrisFrame_50/: V.py
Runs/ArgyrisSemiCircle_100/: V.py
Runs/ArgyrisSemiCircle_25/: V.py
Runs/ArgyrisSemiCircle_50/: V.py
Runs/DPendulum/: V1.py  V2.py  V2_old.py  V_old.py
Runs/DPendulum_flex/: V1.py  V2.py
Runs/DoublePendulum/: V.py  V1.py  V2.py
Runs/Ebner/: F.py  Fa1  (+2 more)
SailPlane/: settingsAD2.py  settingsADconfig.py  settingsADprofile.py  settingsFast.py  settings_profile.py  sp_err.npy
Simo45Beam/: settings.py
SimoFSpaguetti/: settingsFSshell25.py  settingsFSshell50_3D.py
Tests/: plotting.py  test_dynamic.py  test_static.py
Testsold/: Functions.py
UML/: index.html
Utils/: FEM_MatrixBuilder.py  GridOrder.py  common.py  op2reader.py  op2reader2.py  tool4main.py
XRF1/: encrypt.py  settingsAD2.py  settings_gustAD.py
XRF1trim/: generate_trim.py  generatetrim_dynamic.py  generatetrim_nastran.py
algorithms/: index.html
api/: rhsFunctions.md~  simulations.md~  sollibs.md~
developer/: index.html
docs/: play_examples.py
examples/: .gitignore  index.html
fem4inas/: __init__.py  config.py  fem4inas_main.py  utils.py
feniax/: config.py  feniax_main.py  feniax_parmain.py  feniax_shardmain.py  utils.py
getting_started/: index.html
intrinsic/: FEmodel.py  Forces.py  Forcesmb.py  beam_path.py  dq.py  dqm.py  functions.py  geometry.py  geometryrb.py  initial_cond.py  initial_condrb.py  integrals.py  integralsrb.py  modes.py  modesc.py  modesrb.py  qsolvers.py  qsolvers_new.py  sol.py  solrb.py
postprocessing/: index.html
publications/: index.html
search/: search_index.json
tests/: conftest.py  requirements.txt
theory/: index.html
theory_intrinsic/: index.html
wingSP/: generate3D.py  settingsADprofile.py  settingsFast.py
(+1410 files in other folders)
